crates/ndc-clickhouse-core/tests/snapshots/query_builder__complex_columns Inlined SQL@01_bind_complex_parameters.request.json.snap
---
source: crates/ndc-clickhouse/tests/query_builder.rs
expression: inlined_sql
input_file: crates/ndc-clickhouse/tests/query_builder/complex_columns/01_bind_complex_parameters.request.json
---
SELECT
  toJSONString(
    groupArray(
      cast(
        "_rowset"."_rowset",
        'Tuple(rows Array(Tuple("field1" String)))'
      )
    )
  ) AS "rowsets"
FROM
  (
    SELECT
      tuple(
        groupArray(tuple("_row"."_field_field1" AS "field1")) AS "rows"
      ) AS "_rowset"
    FROM
      (
        SELECT
          "_origin"."ColumnA" AS "_field_field1"
        FROM
          "Schema1"."Table1" AS "_origin"
        WHERE
          (
            "_origin"."ColumnB" = [('foo', 'bar')]
            AND "_origin"."ColumnC" = [('foo', 'bar')]
            AND "_origin"."ColumnD" = ((1, 'foo'))
            AND "_origin"."ColumnE" = ([(1, 'foo')])
            AND "_origin"."ColumnF" = ((1, 'foo', [(2, 'bar')]))
            AND "_origin"."ColumnG" = (
              NULL,
              { 'foo': 'bar' },
              [('foo', ('foo', 'bar'))],
              ('foo', 'bar')
            )
          )
      ) AS "_row"
  ) AS "_rowset" FORMAT TabSeparatedRaw;
