crates/ndc-clickhouse-core/tests/snapshots/query_builder__complex_columns Inlined SQL@02_column_accessor_06_no_useless_nested_accessors.request.json.snap
---
source: crates/ndc-clickhouse/tests/query_builder.rs
expression: inlined_sql
input_file: crates/ndc-clickhouse/tests/query_builder/complex_columns/02_column_accessor_06_no_useless_nested_accessors.request.json
---
SELECT
  toJSONString(
    groupArray(
      cast(
        "_rowset"."_rowset",
        'Tuple(rows Array(Tuple("field1" String, "field2" Tuple("b" Map(String, String), "c" Array(Tuple("a" String, "b" Tuple(String, String))), "d" Tuple("a" String, "b" String)))))'
      )
    )
  ) AS "rowsets"
FROM
  (
    SELECT
      tuple(
        groupArray(
          tuple(
            "_row"."_field_field1" AS "field1",
            "_row"."_field_field2" AS "field2"
          )
        ) AS "rows"
      ) AS "_rowset"
    FROM
      (
        SELECT
          "_origin"."ColumnA" AS "_field_field1",
          tuple(
            "_origin"."ColumnG"."b",
            "_origin"."ColumnG"."c",
            "_origin"."ColumnG"."d"
          ) AS "_field_field2"
        FROM
          "Schema1"."Table1" AS "_origin"
      ) AS "_row"
  ) AS "_rowset" FORMAT TabSeparatedRaw;
